crates/ars-components/src/layout/stack/snapshots/ars_components__layout__stack__tests__stack_root_default.snap
---
source: crates/ars-components/src/layout/stack.rs
expression: "snapshot_attrs(&Api::new(Props::new(), false, None).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "stack",
            ),
        ),
    ],
    styles: [
        (
            Display,
            "flex",
        ),
        (
            FlexDirection,
            "row",
        ),
        (
            AlignItems,
            "stretch",
        ),
        (
            JustifyContent,
            "flex-start",
        ),
    ],
}
